项目代码重新进行整理